--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ greenlet==0.4.12
 itsdangerous==0.24
 Jinja2==2.11.3
 MarkupSafe==1.0
-python-engineio==3.8.2.post1
+python-engineio>=3.9.0
 python-socketio==1.8.1
 six==1.11.0
 Werkzeug==0.15.3
